k8s/traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromadb-svc
  namespace: chromadb
spec:
  selector:
    app: chromadb
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chromadb-web
  namespace: chromadb
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`chromadb.dev.motorenflug.at`) && PathPrefix(`/`)
    services:
    - name: chromadb-svc
      port: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chromadb-tls
  namespace: chromadb
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`chromadb.dev.motorenflug.at`) && PathPrefix(`/`)
    services:
    - name: chromadb-svc
      port: 8000
  tls:
    certResolver: le
